unpackaged/main/default/objects/Contact/fields/First_Gift_Date_EDFcontact__c.field-meta.xml
<CustomField>
    <fullName>First_Gift_Date_EDFcontact__c</fullName>
    <description>Formula based on ‘First Hard Credit Date’ (Customizable Rollup) and ‘First Soft Credit Date’ (DLRS). Soft credit is defined by OCR = Funder - Soft Credit, DAF, Workplace Giving, Sponsor, Agency. Excludes Opportunities where Amount = null. Qualifying stages = Received, Received as Unconditional Pledge, Received as Conditional Pledge. All Opp Record Types except PG. Only the master field should be accessible to users.</description>
    <formula>IF((ISBLANK(npsp__First_Soft_Credit_Date__c) &amp;&amp; NOT(ISBLANK(First_Hard_Credit_Date__c)))=TRUE, First_Hard_Credit_Date__c, 
			IF((ISBLANK(First_Hard_Credit_Date__c) &amp;&amp; NOT(ISBLANK(npsp__First_Soft_Credit_Date__c)))=TRUE, npsp__First_Soft_Credit_Date__c, 
			IF((npsp__First_Soft_Credit_Date__c &lt; First_Hard_Credit_Date__c), npsp__First_Soft_Credit_Date__c, 
			First_Hard_Credit_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Close Date of the first received Opportunity where the Contact has a hard or soft credit (not including Planned Gifts)</inlineHelpText>
    <label>First Gift Date_DEL</label>
    <type>Date</type>
</CustomField>