unpackaged/main/default/objects/Contact/fields/First_Hard_Credit_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Hard_Credit_Date__c</fullName>
    <description>The date of this Contact's earliest hard credit.</description>
    <inlineHelpText>The date of this Contact's earliest hard credit.</inlineHelpText>
    <label>First Hard Credit Date</label>
    <type>Date</type>
</CustomField>