unpackaged/main/default/objects/Contact/fields/First_HC_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_HC_Gift_Amount__c</fullName>
    <inlineHelpText>This field is calculated by NPSP Customizable Roll-Up, Where Stage = Received; Received as Pledge. Record Types except Planned Gifts.</inlineHelpText>
    <label>First HC Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>