unpackaged/main/default/objects/Contact/fields/Fisherman_Type__c.field-meta.xml
<CustomField>
    <fullName>Fisherman_Type__c</fullName>
    <label>Fisherman Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Headboat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>