unpackaged/main/default/objects/Contact/fields/GDPR_Declaration_Date__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Declaration_Date__c</fullName>
    <label>GDPR Declaration Date</label>
    <type>Date</type>
</CustomField>