unpackaged/main/default/objects/Contact/fields/Giving_History_Report__c.field-meta.xml
<CustomField>
    <fullName>Giving_History_Report__c</fullName>
    <description>Link to Dynamic Giving History Report.</description>
    <formula>HYPERLINK("/lightning/r/Report/00O8W000006rTjEUAU/view?fv0=" &amp; Id , "Giving History Report" )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Report containing all of the Contact's hard and soft credits for received and projected opportunities.</inlineHelpText>
    <label>Donor Gifts and Projections</label>
    <type>Text</type>
</CustomField>