unpackaged/main/default/objects/Contact/fields/High_Volume_Placeholder_Contact__c.field-meta.xml
<CustomField>
    <fullName>High_Volume_Placeholder_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this is a Placeholder Contact with a high volume of related Opportunities and it can be suppressed from reports as needed.</inlineHelpText>
    <label>High Volume Placeholder Contact</label>
    <type>Checkbox</type>
</CustomField>