unpackaged/main/default/objects/Contact/fields/Host_Dropped_Unable_to_Rematch__c.field-meta.xml
<CustomField>
    <fullName>Host_Dropped_Unable_to_Rematch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Applicants who have this checked off are being treated as part of the Network</description>
    <label>Host Dropped, Unable to Rematch</label>
    <type>Checkbox</type>
</CustomField>