unpackaged/main/default/objects/Contact/fields/Household_Member_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Household_Member_Deceased__c</fullName>
    <formula>IF( Account.Household_Member_Deceased__c = TRUE , TRUE , FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Household Member Deceased</label>
    <type>Checkbox</type>
</CustomField>