unpackaged/main/default/objects/Contact/fields/HPC_HC_Date__c.field-meta.xml
<CustomField>
    <fullName>HPC_HC_Date__c</fullName>
    <description>Date of highest previous contribution (hard credit).</description>
    <inlineHelpText>Date of highest previous contribution (hard credit).</inlineHelpText>
    <label>HPC HC Date</label>
    <type>Date</type>
</CustomField>