unpackaged/main/default/objects/Contact/fields/HPC_SC_Amount__c.field-meta.xml
<CustomField>
    <fullName>HPC_SC_Amount__c</fullName>
    <description>Highest previous contribution amount (soft credit) for this contact</description>
    <inlineHelpText>Highest previous contribution (soft credit).</inlineHelpText>
    <label>HPC SC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>