unpackaged/main/default/objects/Contact/fields/iCLightning__iContact_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__iContact_Contact_Id__c</fullName>
    <label>iContact Contact Id - Lightning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>