unpackaged/main/default/objects/Contact/fields/iCLightning__Number_Test__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Number_Test__c</fullName>
    <label>Number Test</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>