unpackaged/main/default/objects/Contact/fields/Id_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Id_Placeholder__c</fullName>
    <description>used in flow for passing engagement id to contact for use in campaign merge fields</description>
    <inlineHelpText>used in flow for passing engagement id to contact for use in campaign merge fields</inlineHelpText>
    <label>Id Placeholder</label>
    <length>18</length>
    <type>Text</type>
</CustomField>