unpackaged/main/default/objects/Contact/fields/Income_Notes__c.field-meta.xml
<CustomField>
    <fullName>Income_Notes__c</fullName>
    <label>Income Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>