unpackaged/main/default/objects/Contact/fields/Initial_PG_Sub_Constituent_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_PG_Sub_Constituent_Date__c</fullName>
    <description>Date PG sub constituency was added to the record</description>
    <inlineHelpText>Date PG sub constituency was added to the record</inlineHelpText>
    <label>Initial PG Sub Constituent Date</label>
    <type>Date</type>
</CustomField>