unpackaged/main/default/objects/Contact/fields/Is_Automation_Bypassed__c.field-meta.xml
<CustomField>
    <fullName>Is_Automation_Bypassed__c</fullName>
    <description>Allows flow to bypass Validation Rules.</description>
    <formula>Automation_Bypass_DateTime__c &gt; NOW() - 0.0000925926 /*Eight Seconds*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Automation Bypassed?</label>
    <type>Checkbox</type>
</CustomField>