unpackaged/main/default/objects/Contact/fields/iWave_ProScore__c.field-meta.xml
<CustomField>
    <fullName>iWave_ProScore__c</fullName>
    <label>iWave ProScore</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>