unpackaged/main/default/objects/Contact/fields/iWave_ProScore_Capacity__c.field-meta.xml
<CustomField>
    <fullName>iWave_ProScore_Capacity__c</fullName>
    <label>iWave ProScore Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>