unpackaged/main/default/objects/Contact/fields/Last_C4_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_C4_Opt_In_Date__c</fullName>
    <inlineHelpText>This field is populated by a Flow when an Action or Opportunity is created for the C4.</inlineHelpText>
    <label>Last C4 Opt In Date</label>
    <type>Date</type>
</CustomField>