unpackaged/main/default/objects/Contact/fields/Latest_Fellow_Application__c.field-meta.xml
<CustomField>
    <fullName>Latest_Fellow_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Fellow Application</label>
    <referenceTo>Fellow_Application__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>