unpackaged/main/default/objects/Contact/fields/LCRM_Address_Hash__c.field-meta.xml
<CustomField>
    <fullName>LCRM_Address_Hash__c</fullName>
    <description>Field created for Heller migration 2021.</description>
    <label>LCRM Address Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>