unpackaged/main/default/objects/Contact/fields/LCRM_Donor_Level__c.field-meta.xml
<CustomField>
    <fullName>LCRM_Donor_Level__c</fullName>
    <description>Created as a part of Data Migration Heller 2021.</description>
    <label>LCRM Donor Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>