unpackaged/main/default/objects/Contact/fields/Lead_Finder_File_ID_edf__c.field-meta.xml
<CustomField>
    <fullName>Lead_Finder_File_ID_edf__c</fullName>
    <description>Unique external ID assigned to lead record. Used to match back to a prospect mailing.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique external ID assigned to lead record. Used to match back to a prospect mailing.</inlineHelpText>
    <label>Lead Finder File ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>