unpackaged/main/default/objects/Contact/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <description>Common Ground Lead ID from converted Lead record (auto-generated number).</description>
    <externalId>true</externalId>
    <inlineHelpText>Common Ground Lead ID from converted Lead record (auto-generated number).</inlineHelpText>
    <label>Lead ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>