unpackaged/main/default/objects/Contact/fields/Legacy_Source_Table__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Source_Table__c</fullName>
    <description>Created as a part of Heller Data Migration 2021</description>
    <label>Legacy Source Table</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>