unpackaged/main/default/objects/Contact/fields/Less_mail__c.field-meta.xml
<CustomField>
    <fullName>Less_mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Less mail</label>
    <type>Checkbox</type>
</CustomField>