unpackaged/main/default/objects/Contact/fields/List_ID__c.field-meta.xml
<CustomField>
    <fullName>List_ID__c</fullName>
    <description>Organization from which the prospect list containing the lead name was acquired. (i.e. NRDC, Nature Conservancy)</description>
    <inlineHelpText>Organization from which the prospect list containing the lead name was acquired. (i.e. NRDC, Nature Conservancy)</inlineHelpText>
    <label>List ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>