unpackaged/main/default/objects/Contact/fields/Loyalty_Insights__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Insights__c</fullName>
    <description>Target's loyalty insights rating</description>
    <label>Loyalty Insights</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BOB</fullName>
            </value>
            <value>
                <fullName>CON</fullName>
            </value>
            <value>
                <fullName>HBG</fullName>
            </value>
            <value>
                <fullName>LOW</fullName>
            </value>
            <value>
                <fullName>NEW</fullName>
            </value>
            <value>
                <fullName>NOT</fullName>
            </value>
            <value>
                <fullName>TIP</fullName>
            </value>
            <value>
                <fullName>TRULY CONNECTED</fullName>
            </value>
            <value>
                <fullName>HABITUALLY GENEROUS</fullName>
            </value>
            <value>
                <fullName>CONSTANT LOW DOLLAR</fullName>
            </value>
            <value>
                <fullName>BEST OF THE BEST</fullName>
            </value>
            <value>
                <fullName>NOT THAT INTO YOU</fullName>
            </value>
            <value>
                <fullName>NEW AND NOTEWORTHY</fullName>
            </value>
            <value>
                <fullName>TIPPERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>