unpackaged/main/default/objects/Contact/fields/Mail_order_donor__c.field-meta.xml
<CustomField>
    <fullName>Mail_order_donor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mail order donor</label>
    <type>Checkbox</type>
</CustomField>