unpackaged/main/default/objects/Contact/fields/MailingGeocodeAccuracy__c.field-meta.xml
<CustomField>
    <fullName>MailingGeocodeAccuracy__c</fullName>
    <formula>TEXT(MailingGeocodeAccuracy)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MailingGeocodeAccuracy</label>
    <type>Text</type>
</CustomField>