unpackaged/main/default/objects/Contact/fields/MCRM_User__c.field-meta.xml
<CustomField>
    <fullName>MCRM_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user who submits activities for this Contact, may be self or someone else.</inlineHelpText>
    <label>MCRM Submitter</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The MCRM Submitter User should be an Active User.</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>