unpackaged/main/default/objects/Contact/fields/Methane_SAT_Last_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Methane_SAT_Last_Opt_In_Date__c</fullName>
    <inlineHelpText>This field is Populated by a Flow when a New Action or Opportunity is Created.</inlineHelpText>
    <label>Methane SAT Last Opt In Date</label>
    <type>Date</type>
</CustomField>